make body 100vw wide to avoid interface jumps when changing pages

--- a/UI/styles.css
+++ b/UI/styles.css
@@ -29,6 +29,7 @@ body {
     flex-direction: column;
     margin: 0;
     min-height: 100vh;
+    width: 100vw;
     overflow-x: hidden;
 }
 
